--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,15 @@
 /* TODO: Label selector type */
+/* Universal Selector */
 * {
     font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
   }
 
 /* TODO: Label selector type */
+/* Element Selector */
 body {
   background-color: lemonchiffon;
 }
+
 
 header,
 footer {
@@ -17,17 +20,20 @@ footer {
   background-color: #191970;
 }
 
+
 figure {
   width: 200px;
   background-color: #f0ead6;
 }
 
 /* TODO: Label selector type */
+/* Class Selector */
 .highlighted-text {
   font-weight: bolder;
 }
 
 /* TODO: Label selector type */
+/* ID Selector */
 #contact-section {
   background-color: #f0ead6;
 }
